force-app/main/default/objects/Chat__c/Chat__c.object-meta.xml
<CustomObject>
    <label>Chat</label>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>ChatId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>