force-app/main/default/objects/Chat__c/fields/Co_Ordinator__c.field-meta.xml
<CustomField>
    <fullName>Co_Ordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Ordinator</label>
    <referenceTo>Event_Co_Ordinator__c</referenceTo>
    <relationshipLabel>Chats</relationshipLabel>
    <relationshipName>Chats</relationshipName>
    <type>Lookup</type>
</CustomField>