force-app/main/default/objects/Chat__c/fields/EventCod__c.field-meta.xml
<CustomField>
    <fullName>EventCod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EventCod</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Chats</relationshipName>
    <type>Lookup</type>
</CustomField>