force-app/main/default/objects/Chat__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserId</label>
    <referenceTo>checkUser__c</referenceTo>
    <relationshipLabel>Chats</relationshipLabel>
    <relationshipName>Chats</relationshipName>
    <type>Lookup</type>
</CustomField>